err_out.txt
C:\Users\sjm12\연습하기\data\content_db.js:302
                        "content": "<h3>왜 돈을 잃었는지 모른다면 평생 시장의 기부천사로 남을 겁니다.</h3>\n<p>수학 공부할 때 오답 노트 왜 만드나요? 같은 유형의 문제에 두 번 다시 속아서 틀리지 않으려고 만드는 겁니다. 주식 투자는 훨씬 더 엄격해야 합니다. 소중한 생돈, 밤잠 줄여가며 번 그 돈이 실시간으로 나가는 거니까요. <strong>매매 일지는 단순한 기록 장부가 아닙니다.</strong> 자신의 고질적인 '실수 패턴'을 적나라하게 보여주는 차가운 거울이자 스승입니다. 이 거울을 보지 않는 투자자에게 성장은 단 1도 있을 수 없습니다.</p>\n\n<h3>본론 1 - 시장의 냉혹한 현실: 감정 매매가 계좌를 파괴합니다.</h3>\n<p>많은 투자자들이 실패하는 이유는 단순합니다. <strong>같은 실수를 반복하기 때문입니다.</strong> 공포에 질려 바닥에서 팔고, 탐욕에 눈이 멀어 고점에서 사는 패턴을 수없이 반복하죠. 왜 그럴까요? 자신의 매매를 기록하지 않기 때문입니다.</p>\n<p>매매 일지를 쓰면 놀라운 사실을 발견하게 됩니다. "아, 투자자가 매번 이 패턴에서 손실을 보는구나." "손절매 라인을 지키지 않았을 때마다 큰 손실이 발생했구나." "FOMO에 빠져 급등주를 쫓아갔을 때 100% 물렸구나." 이런 깨달음은 일지를 통해서만 얻을 수 있습니다.</p>\n<p>시장은 매일 열립니다. 하지만 <strong>준비 없이 맞이하는 시장은 도박장과 다를 바 없습니다.</strong> 매매 일지는 당신을 도박꾼에서 투자자로 변화시키는 가장 강력한 도구입니다.</p>\n\n<h3>본론 2 - 차트는 거짓말 안 합니다: 기록이 패턴을 드러냅니다.</h3>\n<p>매매 일지를 쓰다 보면 자신만의 패턴이 보이기 시작합니다. 어떤 투자자는 항상 월요일에 충동 매수를 합니다. 어떤 투자자는 주가가 -5% 떨어지면 공포에 질려 손절합니다. 또 어떤 투자자는 수익이 +10%만 나면 조급하게 익절하고, 손실은 -30%까지 버팁니다.</p>\n<p><strong>이런 패턴은 차트에도 나타납니다.</strong> 매수 시점의 차트를 캡처해서 일지에 붙여보세요. 놀랍게도 대부분의 손실 매매는 비슷한 차트 패턴에서 발생합니다. 고점 돌파 후 급등하는 종목, 거래량 없이 올라가는 종목, 이미 과열된 종목... 패턴이 반복됩니다.</p>\n<p>반대로 수익이 난 매매도 패턴이 있습니다. 눌림목에서 매수한 경우, 거래량을 동반한 상승 초기 진입, 장기 이평선 지지를 받는 구간... 이런 패턴을 발견하면 <strong>성공 확률이 높은 자신만의 매매 원칙</strong>을 만들 수 있습니다.</p>\n\n<h3>본론 3 - 실전 솔루션: 오늘부터 당장 시작하세요.</h3>\n<p>매매 일지 작성이 어렵다고요? 복잡하게 생각하지 마세요. 다음 3가지만 기록하면 됩니다.</p>\n<ul>\n <li><strong>차트 캡처:</strong> 매수/매도 시점의 차트를 캡처해서 붙이세요. 나중에 복기할 때 가장 중요한 자료가 됩니다. "왜 이 자리에서 샀지?"를 객관적으로 볼 수 있습니다.</li>\n <li><strong>심리 상태 기록:</strong> 매매 당시의 감정을 솔직하게 적으세요. "조급했다", "탐욕스러웠다", "공포에 질렸다"... 감정을 인식하는 것이 감정을 통제하는 첫걸음입니다.</li>\n <li><strong>원칙 준수 여부:</strong> 자신이 정한 매매 원칙을 지켰는지 체크하세요. 원칙을 어기고 번 돈은 독이 됩니다. 나중에 더 큰 손실로 돌아옵니다.</li>\n</ul>\n<p>매주 주말에는 일주일치 일지를 복기하세요. 어떤 매매가 잘됐고, 어떤 매매가 실패했는지 분석하세요. 실패한 매매에서 공통점을 찾으세요. 그리고 <strong>다음 주에는 그 실수를 반복하지 않겠다고 다짐하세요.</strong></p>\n<p>이 과정을 3개월만 반복하면 놀라운 변화가 일어납니다. 충동 매매가 줄어들고, 손절매를 더 빨리 하게 되고, 수익률이 개선됩니다. 일지는 거짓말하지 않습니다.</p>\n\n<h3>결론 및 면책조항: 일지는 성찰의 시간입니다.</h3>\n<p>주식 투자는 평생 하는 겁니다. 초반에 조금 늦는다고 실패한 게 아닙니다. 오히려 탄탄한 기본기를 갖추고 시작하는 게 마지막에 웃는 승자가 되는 길입니다. <strong>매매 일지는 그 기본기의 핵심입니다.</strong></p>\n<p>오늘부터 단 한 줄이라도 쓰기 시작하세요. 그 작은 습관이 1년 뒤, 10년 뒤 계좌 잔고를 완전히 바꿔놓을 겁니다. 시장은 준비된 자에게만 기회를 줍니다. 일지를 쓰는 투자자는 준비된 투자자입니다.</p>\n<p><strong>※ 주의: 이 정보는 투자 참고용이며, 최종 투자 결정은 본인에게 있습니다. 투자에는 항상 리스크가 따르므로, 신중하게 판단하시기 바랍니다.</strong></p>\n<div class=\"internal-links\" style=\"margin-top: 2rem; padding: 1.5rem; background: rgba(255,255,255,0.05); border-radius: 12px; border-left: 4px solid var(--accent-color);\"><h4 style=\"margin-top: 0; margin-bottom: 1rem;\">💡 함께 읽어보면 좋은 글</h4><ul style=\"list-style: none; padding: 0; margin: 0;\"><li style=\"margin-bottom: 0.5rem;\"><a href=\"blog.html?id=11\" style=\"color: var(--accent-color); text-decoration: none; font-weight: 600;\">🔗 [멘탈 케어] 시드 머니 1,000만 원 만들기 전까지는 주식 앱 지우세요.</a></li><li style=\"margin-bottom: 0.5rem;\"><a href=\"blog.html?id=9\" style=\"color: var(--accent-color); text-decoration: none; font-weight: 600;\">🔗 [리스크 관리] 분산 투자는 비겁한 도망이 아니라 지혜로운 생존 전술입니다.</a></li></ul></div>"
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       ^

SyntaxError: Unexpected identifier '아'
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1288:20)
    at Module._compile (node:internal/modules/cjs/loader:1340:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Module._load (node:internal/modules/cjs/loader:1023:12)
    at Module.require (node:internal/modules/cjs/loader:1235:19)
    at require (node:internal/modules/helpers:176:18)
    at [eval]:1:7
    at runScriptInThisContext (node:internal/vm:144:10)